--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,16 @@
 {% endblock %}
 
 {% block body %}
-<p>Hello</p>
+<p>Available devices</p>
+<ul class="list-group">
+    {% for item in data %}
+    <li href={{ item[0] }} class="list-group-item list-group-item-action">{{ item[0] }}
+        <span class="list-group-item list-group-item-secondary">Partitions:</span>
+        {% for partition in item[1] %}
+            <span class="list-group-item">{{ partition }}</span>
+        {% endfor %}
+    </li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
