--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,19 @@
 
 
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand ms-5" href="#"><i class="bi bi-credit-card-2-front"></i>  Data Extractor</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="/extracted">Extracted data</a>
+    </div>
+  </div>
+</nav>
+
 <div class="container">
-    <h1 class="title_header"><i class="bi bi-credit-card-2-front"></i>  Data Extractor</h1>
     <hr/>
     {% block body %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
