delete redundant link

--- a/templates/partition_details.html
+++ b/templates/partition_details.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<h4 xmlns="http://www.w3.org/1999/html">{{ data[0] }}</h4>
+<h4>{{ data[0] }}</h4>
 <p>{{ data[1] }}</p>
 
 <!--<h5>Data types to extract</h5>-->
