show data on extacted data page

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand ms-5" href="#"><i class="bi bi-credit-card-2-front"></i>  Data Extractor</a>
+  <a class="navbar-brand ms-5" href="/#"><i class="bi bi-credit-card-2-front"></i>  Data Extractor</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
