basic exif extraction

--- a/templates/extracted_data.html
+++ b/templates/extracted_data.html
@@ -39,6 +39,8 @@
             {% endfor %}
         </div>
     </div>
+    {% else %}
+    <p>No data extracted</p>
     {% endfor %}
 </form>
 {% endblock %}
