--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,22 @@
 .title_header{
     margin-left: 30px;
 }
+
+.btn-label {
+	position: relative;
+	left: -12px;
+	display: inline-block;
+	padding: 6px 12px;
+	background: rgba(0, 0, 0, 0.15);
+	border-radius: 3px 0 0 3px;
+}
+
+.btn-labeled {
+	padding-top: 0;
+	padding-bottom: 0;
+	border: 1px solid darkgray;
+}
+
+.btn {
+	margin-bottom: 10px;
+}
