--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@ function refresh() {
 {% endblock %}
 
 {% block body %}
-<div class="d-flex align-items-center justify-content-between">
-    <h4 class="mb-3 me-3">Available devices</h4>
+<div class="d-flex align-items-center justify-content-between mb-3">
+    <h4 class="me-3">Available devices</h4>
     <button type="button" class="btn btn-labeled btn-default" aria-label="Left Align" onclick="refresh()">
         <span class="btn-label"><i class="bi bi-arrow-clockwise"></i></span>Refresh</button>
     </button>
